just changed the title

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <head> </head>
 <body>
-<h1> Hello iman!!!! </h1>
-<h2> Welcome to my site! </h2>
+<h1> Hello everyone!!!! </h1>
+<h2> Welcome to the site! </h2>
 <img src="duck.jpg" alt="a little duck" style="width:500px;height:500px">
 <br/>
 <hr/>
