--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head> </head>
 <body>
 <h1> Hello everyone!!!! </h1>
-<h2> Welcome to the site! </h2>
+<h2> Welcome to my site! </h2>
 <img src="duck.jpg" alt="a little duck" style="width:500px;height:500px">
 <br/>
 <hr/>
